- Issue 133: Get the content type and prevent crawling for example feeds 
- Issue 160: Add more context in shouldVisit 
- Issue 205: Remove eclipse generated files from the repository
- Issues 293 & 294: Grab the TLD list from the online URL Save the TLD list as a compressed file backup / fallback
- Issue 295: Add meta tags into the parsed html object

BugFixes
- Issue 284: Cathing any exception and hidding the log. Upgraded logging in webcrawler Clarified a little statuscode 1005 
- Issue 251: Fix a typo, Fix a typo in line #92. 'cuncurrent' -> 'concurrent' 
- Issue 279: TikaException is thrown while crawling several PDFs in a row The problem was the wrong re-use of the metadata 
- Issue 139: A URL with a backslash was rejected 
- Issue 231: Memory leakage in crawler4j caused by database environment, Closing the environment solves the leak. 
- Issue 206: StringIndexOutOfBoundsException in WebURL 
- Issue 285: WebURL.java causes IndexOutOfBoundException 
- Issue 131: Internal error in WebURL 

Version 3.5 (March 2013)
- Fixed issues #184, #169, #136, #156, #191, #192, #127 
- Fixed  issue #101  in normalizing Urls 
- Fixed  issue #143 : Anchor text is now provided correctly 
- Access to response headers is now provided as a field in Page object 
- Added support for handling content fetch and parsing issues. 
- Added meta refresh and location to outgoing links 
- Upgraded to Java 7 
- Updated dependencies to their latest versions 

Version 3.3
- Updated URL canonicalizer based on RFC1808 and fixed bugs 
- Added Parent Url and Path to WebURL 
- Added support for domain and sub-domain detection. 
- Added support for handling http status codes for fetched pages 

Version 3.1
- Fixed thread-safety bug in page fetcher. 
- Improved URL canonicalizer. 

Version 3.0
- Major re-design of crawler4j to add many new features and make it extendable. 
- Multiple distinct crawlers can now run concurrently. 
- Maven support 