@@ -4,6 +4,7 @@ public class ExtractedUrlAnchorPair {
 
   private String href;
   private String anchor;
+  private String tag;
 
   public String getHref() {
     return href;
@@ -19,5 +20,13 @@ public class ExtractedUrlAnchorPair {
 
   public void setAnchor(String anchor) {
     this.anchor = anchor;
+  }
+
+  public String getTag() {
+    return tag;
+  }
+
+  public void setTag(String tag) {
+    this.tag = tag;
   }
 }
