@@ -24,6 +24,7 @@ Enhancements
 - Issue 205: Remove eclipse generated files from the repository
 - Issues 293 & 294: Grab the TLD list from the online URL Save the TLD list as a compressed file backup / fallback
 - Issue 295: Add meta tags into the parsed html object
+- Issue 297: Add tag name to WebUrl
 
 BugFixes
 - Issue 284: Cathing any exception and hidding the log. Upgraded logging in webcrawler Clarified a little statuscode 1005 
